# grocery-bridge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  manifest.json  pyproject.toml
background/: service-worker.js
content/: walmart.js
lib/: sku-match.js  state.js  todoist.js  walmart-dom.js
options/: options.html  options.js
popup/: popup.css  popup.html  popup.js
scripts/: inspect_walmart.py  map_item.py  walmart_login.py
src/: config.py  main.py  sku_map.py  sync.py  todoist.py  walmart.py
