[project]
name = "grocery-bridge"
version = "0.1.0"
description = "Bridge Todoist grocery list to a Walmart list via Playwright"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "playwright>=1.48",
    "playwright-stealth>=1.0.6",
    "python-dotenv>=1.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "rapidfuzz>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"
